# ta-lib

./: Build.txt  CMakeLists.txt  cmake_install.cmake
include/: ta_config.h
